# eMule-build

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  00-setup-and-build-release.cmd  001_clone_git_repos.cmd  002_create_symlinks.cmd  003_build_MSBuild_ALL.cmd  003_build_MSBuild_ALL_libs.cmd  003_build_MSBuild_ALL_libs.ps1  003_build_MSBuild_ALL_libs_debug.cmd  004_build_MSBuild_eMule.cmd  080_git_ALL.cmd  099_git.cmd  10-build-libs-release.cmd  11-build-libs-debug.cmd  21-build-emule-debug.cmd  23-build-emule-debug-incremental.cmd  24-build-emule-release-incremental-run-and-package.cmd  25-build-emule-debug-incremental-and-run.cmd  26-build-emule-tests-debug.cmd  30-run-emule-release-default.cmd  31-run-emule-release-local.cmd  32-run-emule-release-both.cmd  34-run-emule-debug-local.cmd  35-run-emule-debug-both.cmd  36-run-emule-tests-debug.cmd  37-run-emule-tests-live-diff.cmd  40-package-release.cmd  AGENTS.md  DEP_STATUS.md  OBS.md  OBS2.md  README.md  RESTACK-HANDOFF.md  V060D-CLEAN-HANDOFF.md  build_CMake_mbedtls.cmd  build_CMake_miniupnpc.cmd  build_CMake_zlib.cmd  build_MSBuild_eMule-CxImage-7.02.cmd  (+67 more)
emule_workspace/: __init__.py  __main__.py  build.py  build_state.py  build_tests.py  certification.py  cleanup.py  cli.py  cmake.py  config.py  git.py  layout.py  locks.py  materialize.py  msbuild.py  process.py  python_tests.py  release.py  release_campaign_runner.py  setup_commands.py  status.py  test_runs.py  toolchain.py  topology.py  validation.py
helpers/: check-dep-updates.cmd  check-dep-updates.ps1
patches/: cryptopp-CRYPTOPP_8_9_0.patch  (+7 more)
(+44 files in other folders)
