[project]
name = "emule-workspace"
version = "0.0.0"
description = "Python workspace orchestration for the canonical eMule BB workspace."
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.scripts]
emule-workspace = "emule_workspace.cli:main"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["."]
